task-10-mutate-default-resources/no-resources-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-resources-pod
spec:
  containers:
    - name: nginx
      image: nginx:1.25
