task-10-mutate-default-resources/partial-resources-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: partial-resources-pod
spec:
  containers:
    - name: nginx
      image: nginx:1.25
      resources:
        requests:
          cpu: 100m
          memory: 200Mi
