task-10-mutate-default-resources/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-default-resources
spec:
  rules:
    - name: add-default-resources
      match:
        any:
        - resources:
            kinds:
              - Pod
      mutate:
        patchStrategicMerge:
          spec:
            containers:
              - (name): "*"
                resources:
                  +(requests):
                    +(cpu): 100m
                    +(memory): 128Mi
                  +(limits):
                    +(cpu): 250m
                    +(memory): 256Mi
